--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ header{
     padding-bottom: 50px;
 }
 .influancer-info h1{
-    font-size: 60px;
+    font-size: 50px;
     margin-bottom: 0px;
 }
 .order-button{
@@ -142,7 +142,7 @@ header{
 ----------------------------- */
 .footer-element{
     width: 100%;
-    padding: 25px 0px 30px 0px;
+    padding: 25px 0px 10px 0px;
     margin: 0 auto;
     background-color:#03203C;
     display: flex;
@@ -165,5 +165,103 @@ header{
     color: #758283;
 }
 
-/* <!-- footer-section-end --
+/* - footer-section-end ------
 ----------------------------- */
+
+/* ------media-query-for
+----Mobile-Devices-(------------
+----------------------------- */
+@media only screen and (max-width:688px) {
+    header{
+        width: 90%;
+    }
+    .navigation-manu{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+    }
+    .navigation-manu h3{
+        text-align: center;
+    }
+    .nav-option{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .nav-option a, span, i{
+        padding: 2px;
+        text-align: center;
+    }
+    .main-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+    .influancer-picture img{
+        width: 350px;
+        height: 350px;
+        padding-left:0px;
+    }
+    .product-container{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center; 
+    }
+    .social-media{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .social-image img{
+        padding-right: 0px;
+        height: 300px;
+        width: 355px;
+        border-radius: 50px ;
+    }
+}
+/* ------media-query-for
+----Tablet-Devices-(------------
+----------------------------- */
+@media only screen and (min-width: 688px) and (max-width: 922px) {
+    .navigation-manu{
+        justify-content: space-between;
+    }
+    .navigation-manu h3{
+        text-align: center;
+    }
+    .main-section{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+    .influancer-picture img{
+        width: 350px;
+        height: 350px;
+        padding-left:0px;
+    }
+    .product-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row:auto;
+        justify-content: center;
+        align-items: center; 
+    }
+    .social-media{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        padding-right:none;
+    }
+    .social-image img{
+        padding-right: 0px;
+        height: 300px;
+        width: 355px;
+        border-radius: 50px ;
+    }  
+
+}
